add Portfolio - Wedding

--- a/project.html
+++ b/project.html
@@ -35,6 +35,18 @@
   </header>
 
 
+  <section id="wedding">
+    <div class="wrap">
+      <a href="https://jong2yu.github.io/Portfolio---Wedding/">
+        <div class="monitor">
+          <img src="./images/monitor.png" alt="monitor">
+        </div>
+        <div class="phone">
+          <img src="./images/phone.png" alt="phone">
+        </div>
+      </a>
+    </div>
+  </section>
 
   <section id="one">
     <div class="wrap">
